# UnitSPI

./: .gitignore  Dockerfile  pyproject.toml  run_uwsgi.sh
djangoProject/: custom_router.py  settings.py  urls.py  utils.py
events/: admin.py  models.py  serializers.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_eventmodel_joined_users.py
events_app/: admin.py  apps.py  urls.py
events_app/api/serializers/: events.py  users.py
events_app/api/views/: events.py  users.py
events_app/management/commands/: wait_for_db.py
events_app/migrations/: 0001_initial.py  0002_alter_customuser_tg_link.py  0003_alter_customuser_chat_id_alter_customuser_tg_link.py  0004_alter_eventmodel_joined_users.py  0005_alter_eventmodel_joined_users.py  0006_eventmodel_organizer_alter_eventmodel_joined_users.py
events_app/models/: __init__.py  events.py  users.py
events_app/utils/: exceptions.py  permissions.py
users/: models.py
users/migrations/: 0001_initial.py
