[project]
name = "backendproject"
version = "0.1.0"
description = "Backend of project"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.8",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "djoser>=2.3.3",
    "python-dotenv>=1.2.1",
    "psycopg[binary]>=3.2.9",
]

[dependency-groups]
prod = [
    "psycopg[binary]>=3.2.9",
    "uwsgi>=2.0.30",
]
